sem4pi-23-24-2df1/LPROG/src/main/java/jobRequirements/JobRequirementsGrammarParser.java
// Generated from C:/Projeto4/sem4pi-23-24-2df1/LPROG/src/main/grammar/JobRequirementsGrammar.g4 by ANTLR 4.13.1
package jobRequirements;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JobRequirementsGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, WORD=5, SPACE=6, EOL=7, INTEGER=8, DECIMAL=9, 
		HASHTAG=10, POINT=11, COMMA=12, TWO_POINTS=13, SEMICOLON=14, LEFT_PARENTHESIS=15, 
		RIGHT_PARENTHESIS=16, QUOTED_MARKS=17, ANSWER=18, REQUIREMENTS=19, MININT=20, 
		MAXINT=21, MINORD=22, MAXORD=23, MULORSING=24, SPECIAL_CHARS=25;
	public static final int
		RULE_start = 0, RULE_sentences = 1, RULE_sentence = 2, RULE_quotedTitle = 3, 
		RULE_requirements = 4, RULE_question = 5, RULE_requirement = 6, RULE_requirement_min_int = 7, 
		RULE_requirement_max_int = 8, RULE_requirement_min_ord = 9, RULE_requirement_max_ord = 10, 
		RULE_requirement_mulorsing = 11, RULE_optionz = 12, RULE_option = 13, 
		RULE_answer = 14, RULE_requeriment_expected = 15, RULE_requirement_expected_int = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "sentences", "sentence", "quotedTitle", "requirements", "question", 
			"requirement", "requirement_min_int", "requirement_max_int", "requirement_min_ord", 
			"requirement_max_ord", "requirement_mulorsing", "optionz", "option", 
			"answer", "requeriment_expected", "requirement_expected_int"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'JOB'", "'REQUIREMENTS'", "'-'", "'''", null, "' '", null, null, 
			null, "'#'", "'.'", "','", "':'", "';'", "'('", "')'", "'\"'", "'Answer:'", 
			"'Requirement:'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "WORD", "SPACE", "EOL", "INTEGER", "DECIMAL", 
			"HASHTAG", "POINT", "COMMA", "TWO_POINTS", "SEMICOLON", "LEFT_PARENTHESIS", 
			"RIGHT_PARENTHESIS", "QUOTED_MARKS", "ANSWER", "REQUIREMENTS", "MININT", 
			"MAXINT", "MINORD", "MAXORD", "MULORSING", "SPECIAL_CHARS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JobRequirementsGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JobRequirementsGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public List<TerminalNode> SPACE() { return getTokens(JobRequirementsGrammarParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(JobRequirementsGrammarParser.SPACE, i);
		}
		public QuotedTitleContext quotedTitle() {
			return getRuleContext(QuotedTitleContext.class,0);
		}
		public RequirementsContext requirements() {
			return getRuleContext(RequirementsContext.class,0);
		}
		public List<TerminalNode> EOL() { return getTokens(JobRequirementsGrammarParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(JobRequirementsGrammarParser.EOL, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobRequirementsGrammarVisitor ) return ((JobRequirementsGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(T__0);
			setState(35);
			match(SPACE);
			setState(36);
			match(T__1);
			setState(37);
			match(SPACE);
			setState(38);
			quotedTitle();
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EOL) {
				{
				{
				setState(39);
				match(EOL);
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			requirements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentencesContext extends ParserRuleContext {
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public List<TerminalNode> SPACE() { return getTokens(JobRequirementsGrammarParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(JobRequirementsGrammarParser.SPACE, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JobRequirementsGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JobRequirementsGrammarParser.COMMA, i);
		}
		public List<TerminalNode> POINT() { return getTokens(JobRequirementsGrammarParser.POINT); }
		public TerminalNode POINT(int i) {
			return getToken(JobRequirementsGrammarParser.POINT, i);
		}
		public SentencesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentences; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).enterSentences(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).exitSentences(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobRequirementsGrammarVisitor ) return ((JobRequirementsGrammarVisitor<? extends T>)visitor).visitSentences(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentencesContext sentences() throws RecognitionException {
		SentencesContext _localctx = new SentencesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentences);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			sentence();
			setState(58);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(53);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case SPACE:
					case POINT:
					case COMMA:
						{
						setState(49);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==POINT || _la==COMMA) {
							{
							setState(48);
							_la = _input.LA(1);
							if ( !(_la==POINT || _la==COMMA) ) {
							_errHandler.recoverInline(this);
							}
							else {
								if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
								_errHandler.reportMatch(this);
								consume();
							}
							}
						}

						setState(51);
						match(SPACE);
						}
						break;
					case T__2:
						{
						setState(52);
						match(T__2);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(55);
					sentence();
					}
					} 
				}
				setState(60);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenceContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(JobRequirementsGrammarParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(JobRequirementsGrammarParser.WORD, i);
		}
		public List<TerminalNode> SPECIAL_CHARS() { return getTokens(JobRequirementsGrammarParser.SPECIAL_CHARS); }
		public TerminalNode SPECIAL_CHARS(int i) {
			return getToken(JobRequirementsGrammarParser.SPECIAL_CHARS, i);
		}
		public TerminalNode INTEGER() { return getToken(JobRequirementsGrammarParser.INTEGER, 0); }
		public TerminalNode DECIMAL() { return getToken(JobRequirementsGrammarParser.DECIMAL, 0); }
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobRequirementsGrammarVisitor ) return ((JobRequirementsGrammarVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentence);
		int _la;
		try {
			int _alt;
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(61);
				match(WORD);
				setState(63);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(62);
					match(SPECIAL_CHARS);
					}
					break;
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(65);
					match(T__3);
					setState(66);
					match(WORD);
					setState(68);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						setState(67);
						match(SPECIAL_CHARS);
						}
						break;
					}
					}
				}

				}
				}
				break;
			case INTEGER:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				match(INTEGER);
				}
				break;
			case DECIMAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				match(DECIMAL);
				}
				break;
			case SPECIAL_CHARS:
				enterOuterAlt(_localctx, 4);
				{
				setState(75); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(74);
						match(SPECIAL_CHARS);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(77); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuotedTitleContext extends ParserRuleContext {
		public List<TerminalNode> QUOTED_MARKS() { return getTokens(JobRequirementsGrammarParser.QUOTED_MARKS); }
		public TerminalNode QUOTED_MARKS(int i) {
			return getToken(JobRequirementsGrammarParser.QUOTED_MARKS, i);
		}
		public SentencesContext sentences() {
			return getRuleContext(SentencesContext.class,0);
		}
		public QuotedTitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quotedTitle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).enterQuotedTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).exitQuotedTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobRequirementsGrammarVisitor ) return ((JobRequirementsGrammarVisitor<? extends T>)visitor).visitQuotedTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuotedTitleContext quotedTitle() throws RecognitionException {
		QuotedTitleContext _localctx = new QuotedTitleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_quotedTitle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(QUOTED_MARKS);
			setState(82);
			sentences();
			setState(83);
			match(QUOTED_MARKS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RequirementsContext extends ParserRuleContext {
		public List<RequirementContext> requirement() {
			return getRuleContexts(RequirementContext.class);
		}
		public RequirementContext requirement(int i) {
			return getRuleContext(RequirementContext.class,i);
		}
		public List<TerminalNode> EOL() { return getTokens(JobRequirementsGrammarParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(JobRequirementsGrammarParser.EOL, i);
		}
		public RequirementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).enterRequirements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).exitRequirements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobRequirementsGrammarVisitor ) return ((JobRequirementsGrammarVisitor<? extends T>)visitor).visitRequirements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RequirementsContext requirements() throws RecognitionException {
		RequirementsContext _localctx = new RequirementsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_requirements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			requirement();
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EOL) {
				{
				{
				setState(86);
				match(EOL);
				setState(87);
				requirement();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContext extends ParserRuleContext {
		public List<TerminalNode> QUOTED_MARKS() { return getTokens(JobRequirementsGrammarParser.QUOTED_MARKS); }
		public TerminalNode QUOTED_MARKS(int i) {
			return getToken(JobRequirementsGrammarParser.QUOTED_MARKS, i);
		}
		public SentencesContext sentences() {
			return getRuleContext(SentencesContext.class,0);
		}
		public List<TerminalNode> SPACE() { return getTokens(JobRequirementsGrammarParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(JobRequirementsGrammarParser.SPACE, i);
		}
		public OptionzContext optionz() {
			return getRuleContext(OptionzContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(JobRequirementsGrammarParser.SEMICOLON, 0); }
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobRequirementsGrammarVisitor ) return ((JobRequirementsGrammarVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_question);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SPACE) {
				{
				{
				setState(93);
				match(SPACE);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			match(QUOTED_MARKS);
			setState(100);
			sentences();
			setState(101);
			match(SPACE);
			setState(102);
			optionz();
			setState(103);
			match(QUOTED_MARKS);
			setState(104);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RequirementContext extends ParserRuleContext {
		public Requirement_min_intContext requirement_min_int() {
			return getRuleContext(Requirement_min_intContext.class,0);
		}
		public Requirement_max_intContext requirement_max_int() {
			return getRuleContext(Requirement_max_intContext.class,0);
		}
		public Requirement_min_ordContext requirement_min_ord() {
			return getRuleContext(Requirement_min_ordContext.class,0);
		}
		public Requirement_max_ordContext requirement_max_ord() {
			return getRuleContext(Requirement_max_ordContext.class,0);
		}
		public Requirement_mulorsingContext requirement_mulorsing() {
			return getRuleContext(Requirement_mulorsingContext.class,0);
		}
		public RequirementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).enterRequirement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).exitRequirement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobRequirementsGrammarVisitor ) return ((JobRequirementsGrammarVisitor<? extends T>)visitor).visitRequirement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RequirementContext requirement() throws RecognitionException {
		RequirementContext _localctx = new RequirementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_requirement);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MININT:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				requirement_min_int();
				}
				break;
			case MAXINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				requirement_max_int();
				}
				break;
			case MINORD:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				requirement_min_ord();
				}
				break;
			case MAXORD:
				enterOuterAlt(_localctx, 4);
				{
				setState(109);
				requirement_max_ord();
				}
				break;
			case MULORSING:
				enterOuterAlt(_localctx, 5);
				{
				setState(110);
				requirement_mulorsing();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Requirement_min_intContext extends ParserRuleContext {
		public TerminalNode MININT() { return getToken(JobRequirementsGrammarParser.MININT, 0); }
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public TerminalNode EOL() { return getToken(JobRequirementsGrammarParser.EOL, 0); }
		public Requirement_expected_intContext requirement_expected_int() {
			return getRuleContext(Requirement_expected_intContext.class,0);
		}
		public AnswerContext answer() {
			return getRuleContext(AnswerContext.class,0);
		}
		public Requirement_min_intContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirement_min_int; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).enterRequirement_min_int(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).exitRequirement_min_int(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobRequirementsGrammarVisitor ) return ((JobRequirementsGrammarVisitor<? extends T>)visitor).visitRequirement_min_int(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Requirement_min_intContext requirement_min_int() throws RecognitionException {
		Requirement_min_intContext _localctx = new Requirement_min_intContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_requirement_min_int);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(MININT);
			setState(114);
			question();
			setState(115);
			match(EOL);
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REQUIREMENTS:
				{
				setState(116);
				requirement_expected_int();
				}
				break;
			case ANSWER:
				{
				setState(117);
				answer();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Requirement_max_intContext extends ParserRuleContext {
		public TerminalNode MAXINT() { return getToken(JobRequirementsGrammarParser.MAXINT, 0); }
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public TerminalNode EOL() { return getToken(JobRequirementsGrammarParser.EOL, 0); }
		public Requirement_expected_intContext requirement_expected_int() {
			return getRuleContext(Requirement_expected_intContext.class,0);
		}
		public AnswerContext answer() {
			return getRuleContext(AnswerContext.class,0);
		}
		public Requirement_max_intContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirement_max_int; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).enterRequirement_max_int(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).exitRequirement_max_int(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobRequirementsGrammarVisitor ) return ((JobRequirementsGrammarVisitor<? extends T>)visitor).visitRequirement_max_int(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Requirement_max_intContext requirement_max_int() throws RecognitionException {
		Requirement_max_intContext _localctx = new Requirement_max_intContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_requirement_max_int);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(MAXINT);
			setState(121);
			question();
			setState(122);
			match(EOL);
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REQUIREMENTS:
				{
				setState(123);
				requirement_expected_int();
				}
				break;
			case ANSWER:
				{
				setState(124);
				answer();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Requirement_min_ordContext extends ParserRuleContext {
		public TerminalNode MINORD() { return getToken(JobRequirementsGrammarParser.MINORD, 0); }
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public TerminalNode EOL() { return getToken(JobRequirementsGrammarParser.EOL, 0); }
		public Requeriment_expectedContext requeriment_expected() {
			return getRuleContext(Requeriment_expectedContext.class,0);
		}
		public AnswerContext answer() {
			return getRuleContext(AnswerContext.class,0);
		}
		public Requirement_min_ordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirement_min_ord; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).enterRequirement_min_ord(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobRequirementsGrammarListener ) ((JobRequirementsGrammarListener)listener).exitRequirement_min_ord(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobRequirementsGrammarVisitor ) return ((JobRequirementsGrammarVisitor<? extends T>)visitor).visitRequirement_min_ord(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Requirement_min_ordContext requirement_min_ord() throws RecognitionException {
		Requirement_min_ordContext _localctx = new Requirement_min_ordContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_requirement_min_ord);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(MINORD);
			setState(128);
			question();
			setState(129);
			match(EOL);
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REQUIREMENTS:
				{
				setState(130);
				requeriment_expected();
				}
				break;
			case ANSWER:
				{
				setState(131);
				answer();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
